--- a/StaffHub/Views/Employee/Index.cshtml
+++ b/StaffHub/Views/Employee/Index.cshtml
@@ -33,26 +33,60 @@
     <table class="table w-100 mt">
         <thead>
             <tr>
-                <th>Employee Name</th>
-                <th>Email</th>
-                <th>Date of Birth</th>
-                <th>Age</th>
-                <th>Gender</th>
-                <th>Role</th>
-                <th>IsActive</th>
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.EmployeeName) },
+                    {"displayName", "Employee Name" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.Email) },
+                    {"displayName", "Email" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.DateOfBirth) },
+                    {"displayName", "Date Of Birth" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.Age) },
+                    {"displayName", "Age" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.Gender) },
+                    {"displayName", "Gender" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.Role) },
+                    {"displayName", "Role" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.DepartmentName) },
+                    {"displayName", "Department" },
+
+                })
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData){
+                    { "columnName", nameof(EmployeeResponse.IsActive) },
+                    {"displayName", "Is Active" },
+
+                })
             </tr>
         </thead>
         <tbody>
             @foreach (EmployeeResponse employee in Model)
             {
                 <tr>
-                    <td>@employee.EmployeeName</td>
-                    <td>@employee.Email</td>
-                    <td>@employee.DateOfBirth?.ToString("dd MMM yyyy")</td>
-                    <td>@employee.Age</td>
-                    <td>@employee.Gender</td>
-                    <td>@employee.Role</td>
-                    <td>@employee.IsActive</td>
+                    <td style="width:15%">@employee.EmployeeName</td>
+                    <td style="width:20%">@employee.Email</td>
+                    <td style="width:12%">@employee.DateOfBirth?.ToString("dd MMM yyyy")</td>
+                    <td style="width:8%">@employee.Age</td>
+                    <td style="width:10%">@employee.Gender</td>
+                    <td style="width:12%">@employee.Role</td>
+                    <td style="width:12%">@employee.DepartmentName</td>
+                    <td style="width:8%">@employee.IsActive</td>
                 </tr>
             }
         </tbody>
