--- a/StaffHub/Views/_ViewImports.cshtml
+++ b/StaffHub/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using StaffHub.ServiceContracts.DTO;
 @using StaffHub.ServiceContracts.Enums;
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
