--- a/StaffHub/Views/Employee/Edit.cshtml
+++ b/StaffHub/Views/Employee/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@model EmployeeAddRequest
+﻿@model EmployeeUpdateRequest
 @{
-    ViewBag.Title = "Create Employee";
+    ViewBag.Title = "Edit Employee";
 }
 
 <a href="~/employee/index" class="link-hover"> Back to Employee List</a>
-<h2>Add Employee</h2>
+<h2>Edit Employee</h2>
 <div class="w-50" >
-    <form action="~/employee/create" method="post">
+    <form asp-controller="Employee" asp-action="Edit" method="post">
+        <input type="hidden" asp-for="EmployeeID"/>
         @*Employee name*@
         <div class="form-field flex">
             <div class="w-25">
@@ -118,7 +119,7 @@
             </div>
 
             <div class="flex-1">
-                <button class="button button-green-back"> Add Employee </button>
+                <button class="button button-green-back"> Update </button>
                 @if(ViewBag.Errors != null)
                 {
                     <div class="text-red ml">
