--- a/StaffHub/Views/Employee/Index.cshtml
+++ b/StaffHub/Views/Employee/Index.cshtml
@@ -74,6 +74,7 @@
                     {"displayName", "Is Active" },
 
                 })
+                <th>Options</th>
             </tr>
         </thead>
         <tbody>
@@ -81,13 +82,21 @@
             {
                 <tr>
                     <td style="width:15%">@employee.EmployeeName</td>
-                    <td style="width:20%">@employee.Email</td>
+                    <td style="width:18%">@employee.Email</td>
                     <td style="width:12%">@employee.DateOfBirth?.ToString("dd MMM yyyy")</td>
                     <td style="width:8%">@employee.Age</td>
                     <td style="width:10%">@employee.Gender</td>
-                    <td style="width:12%">@employee.Role</td>
-                    <td style="width:12%">@employee.DepartmentName</td>
+                    <td style="width:10%">@employee.Role</td>
+                    <td style="width:10%">@employee.DepartmentName</td>
                     <td style="width:8%">@employee.IsActive</td>
+                    <td style="width:8%"> 
+                        <a asp-controller="Employee" asp-action="Edit"
+                           asp-route-employeeID="@employee.EmployeeID"> Edit </a>
+                    </td>
+                    <td style="width:8%">
+                        <a asp-controller="Employee" asp-action="Delete"
+                           asp-route-employeeID="@employee.EmployeeID"> Delete </a>
+                    </td>
                 </tr>
             }
         </tbody>
