Implemented delete functionality

--- a/StaffHub/Views/Employee/Delete.cshtml
+++ b/StaffHub/Views/Employee/Delete.cshtml
@@ -46,7 +46,7 @@
             </div>
 
             <div class="flex-1">
-                <button class="button button-green-back"> Update </button>
+                <button class="button button-green-back"> Delete </button>
                 @if(ViewBag.Errors != null)
                 {
                     <div class="text-red ml">
