--- a/StaffHub/Views/Employee/CreateEmployee.cshtml
+++ b/StaffHub/Views/Employee/CreateEmployee.cshtml
@@ -3,9 +3,22 @@
     ViewBag.Title = "Create Employee";
 }
 
-<a href="~/employee/index" class="link-hover"> Back to Employee List</a>
-<h2>Add Employee</h2>
-<div class="w-50" >
+<div class="flex">
+    <div class="flex-1">
+        <div class="text-grey">
+            <span>StaffHub</span>
+            <i class="fa-solid fa-caret-right"></i>
+            <span>Employees</span>
+            <i class="fa-solid fa-caret-right"></i>
+            <span>Create</span>
+        </div>
+    </div>
+</div>
+
+
+<div class="form-container" >
+    <a href="~/employee/index" class="link-hover"> Back to Employee List</a>
+    <h2 class="text-large">Add Employee</h2>
     <form action="~/employee/create" method="post">
         @*Employee name*@
         <div class="form-field flex">
