--- a/StaffHub/Views/Account/Register.cshtml
+++ b/StaffHub/Views/Account/Register.cshtml
@@ -77,6 +77,24 @@
             </div>
         </div>
 
+
+        @*User Type*@
+        <div class="form-field flex">
+            <div class="w-25">
+                <label for="UserType" class="form-label pt"> User Type </label>
+            </div>
+            <div class="flex-1">
+                <div>
+                    <input type="radio" id="User" asp-for="UserType" value="User" checked="true"/>
+                    <label for="User">User</label>
+
+                    <input type="radio" id="Admin" asp-for="UserType" value="Admin" />
+                    <label for="Admin">Admin</label>
+                </div>
+
+            </div>
+        </div>
+
         @*Register Button*@
         <div class="form-field flex">
             <div class="w-25">
@@ -94,6 +112,7 @@
                         </ul>
                     </div>
                 }
+
             </div>
         </div>
 
