Enhancement: Restrict employee edit and delete operation to admin role

--- a/StaffHub/Views/Account/Register.cshtml
+++ b/StaffHub/Views/Account/Register.cshtml
@@ -10,7 +10,15 @@
 </div>
 
 <div class="form-container">
-    Already Registered? <a href="~/account/login" class="link-hover">Login</a>
+    @if (!User.Identity.IsAuthenticated)
+    {
+        <div>Already Registered?
+            <a href="~/account/login" class="link-hover">Login</a>
+        </div>
+        
+    }
+    
+     
     <h2 class="text-large">Register</h2>
 
     <form asp-controller="Account" asp-action="Register" method="post">
@@ -79,21 +87,47 @@
 
 
         @*User Type*@
-        <div class="form-field flex">
-            <div class="w-25">
-                <label for="UserType" class="form-label pt"> User Type </label>
-            </div>
-            <div class="flex-1">
-                <div>
-                    <input type="radio" id="User" asp-for="UserType" value="User" checked="true"/>
-                    <label for="User">User</label>
+        @if (!User.Identity.IsAuthenticated)
+        {
+            @if (User.IsInRole("Admin"))
+            {
+                <div class="form-field flex">
+                    <div class="w-25">
+                        <label for="UserType" class="form-label pt"> User Type </label>
+                    </div>
+                    <div class="flex-1">
+                        <div>
+                            <input type="radio" id="User" asp-for="UserType" value="User" checked="true" />
+                            <label for="User">User</label>
 
-                    <input type="radio" id="Admin" asp-for="UserType" value="Admin" />
-                    <label for="Admin">Admin</label>
+                            <input type="radio" id="Admin" asp-for="UserType" value="Admin" />
+                            <label for="Admin">Admin</label>
+                        </div>
+
+                    </div>
                 </div>
+            }
+            else
+            {
+                <div class="form-field flex" style="display:none">
+                    <div class="w-25">
+                        <label for="UserType" class="form-label pt"> User Type </label>
+                    </div>
+                    <div class="flex-1">
+                        <div>
+                            <input type="radio" id="User" asp-for="UserType" value="User" checked="true" />
+                            <label for="User">User</label>
 
-            </div>
-        </div>
+                            <input type="radio" id="Admin" asp-for="UserType" value="Admin" />
+                            <label for="Admin">Admin</label>
+                        </div>
+
+                    </div>
+                </div>
+            }
+        }
+
+        
 
         @*Register Button*@
         <div class="form-field flex">
@@ -101,6 +135,7 @@
             </div>
             <div class="flex-1">
                 <button class="button button-green-back" type="submit"> Register </button>
+                <div asp-validation-summary="All"></div>
                 @if (ViewBag.Errors != null)
                 {
                     <div class="text-red ml">
@@ -119,8 +154,12 @@
     </form>
 </div>
 
+@section scripts
+{
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js" integrity="sha512-FOhq9HThdn7ltbK8abmGn60A/EMtEzIzv1rvuh+DqzJtSGq8BRdEN0U+j0iKEIffiw/yEtVuladk6rsG4X6Uqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js" integrity="sha512-o6XqxgrUsKmchwy9G5VRNWSSxTS4Urr4loO6/0hYdpWmFUfHqGzawGxeQGMDqYzxjY9sbktPbNlkIQJWagVZQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+}
