--- a/StaffHub/Views/Employee/CreateEmployee.cshtml
+++ b/StaffHub/Views/Employee/CreateEmployee.cshtml
@@ -132,6 +132,7 @@
 
             <div class="flex-1">
                 <button class="button button-green-back"> Add Employee </button>
+                <div asp-validation-summary="All" class="text-red"></div>
                 @if(ViewBag.Errors != null)
                 {
                     <div class="text-red ml">
