--- a/StaffHub/Views/Employee/Edit.cshtml
+++ b/StaffHub/Views/Employee/Edit.cshtml
@@ -134,7 +134,7 @@
 
             <div class="flex-1">
                 <button class="button button-green-back"> Update </button>
-                <div asp-validation-summary="All"></div>
+                <div asp-validation-summary="All" class="text-red"></div>
                 @if(ViewBag.Errors != null)
                 {
                     <div class="text-red ml">
