--- a/StaffHub/Views/Shared/_Layout.cshtml
+++ b/StaffHub/Views/Shared/_Layout.cshtml
@@ -27,14 +27,14 @@
                                         <i class="fa-solid fa-user"></i>
                                         @User.Identity?.Name
                                     </li>
-                                    @if (User.IsInRole("Admin"))
+                                    @* @if (User.IsInRole("Admin"))
                                     {
                                         <li>
                                             <a asp-controller="home" asp-action="index"
                                                asp-area="admin"> Admin Home </a>
 
                                         </li>
-                                    }
+                                    } *@
                                     
                                     <li>
                                         <a href="~/account/logout"> Logout </a>
