Fixed GUID errors in test data

--- a/StaffHub/Views/Employee/Edit.cshtml
+++ b/StaffHub/Views/Employee/Edit.cshtml
@@ -57,10 +57,10 @@
         @*DateOfBirth*@
         <div class="form-field flex">
             <div class="w-25">
-                <label for="DateOfBirth" class="form-label pt"> Date Of Birth </label>
+                <label for="DateOfBirth" class="form-label pt" > Date Of Birth </label>
             </div>
             <div class="flex-1">
-                <input asp-for="DateOfBirth" class="form-input" />
+                <input asp-for="DateOfBirth" class="form-input" type="date" />
                 <span asp-validation-for="DateOfBirth" class="text-red"></span>
             </div>
         </div>
